# volume-pulse

./: CMakeLists.txt  Makefile  PKGBUILD  README.md  installer.sh  shard.yml  volume-pulse
source/: CMakeLists.txt  config.conf  main.c
src/: main.c  volume-pulse.cr
src/lib/: Xlib.cr
